--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8' />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Philips Hue SDK - Java Multi-Platform : Java Multi-Platform and Android SDK" />
+    <meta name="description" content="Philips Hue SDK - Java Multi-Platform : Java Multi-Platform and Android SDK (beta)" />
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/PhilipsHue/PhilipsHueSDK-Java-MultiPlatform-Android">View on GitHub</a>
 
           <h1 id="project_title">Philips Hue SDK - Java Multi-Platform</h1>
-          <h2 id="project_tagline">Java Multi-Platform and Android SDK</h2>
+          <h2 id="project_tagline">Java Multi-Platform and Android SDK (beta)</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/PhilipsHue/PhilipsHueSDK-Java-MultiPlatform-Android/zipball/master">Download this project as a .zip file</a>
