Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </ul><h3>
 <a name="documentation" class="anchor" href="#documentation"><span class="octicon octicon-link"></span></a>Documentation</h3>
 
-<p>For an explanation of the key concepts and how to use the SDK, please refer to the Android README.  If you wish to developer for other platforms the core concepts are the same.</p>
+<p>For an explanation of the key concepts and how to use the SDK, please refer to the Android README.  If you wish to develop for other platforms the core concepts are the same.</p>
 
 <p><a href="https://github.com/PhilipsHue/PhilipsHueSDK-Java-MultiPlatform-Android/blob/master/README.md">https://github.com/PhilipsHue/PhilipsHueSDK-Java-MultiPlatform-Android/blob/master/README.md</a></p>
 
